adv_01_network_policy/yaml/pod-non-admin.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-non-admin
  labels:
    type: non-admin
spec:
  containers:
  - name: myapp
    image: jyang4900/myapp
