adv_01_network_policy/yaml/pod-prod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod-prod
  labels:
    env: prod
spec:
  containers:
  - name: myapp
    image: jyang4900/myapp
