adv_01_network_policy/yaml/my-networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: my-networkpolicy
spec:
  podSelector:
    matchLabels:
      env: prod
  ingress:
  - from:
    - podSelector:
        matchLabels:
          type: admin
